# controller/login.controller.go
@@ -1,10 +1,12 @@
 package controller
 
 import (
+	"net/http"
+
 	"github.com/Rafipratama22/mnc_test.git/dto"
 	"github.com/Rafipratama22/mnc_test.git/entity"
 	"github.com/Rafipratama22/mnc_test.git/repository"
-	"net/http"
+	// "github.com/google/uuid"
 
 	"github.com/gin-gonic/gin"
 )
@@ -13,6 +15,8 @@ type LoginController interface {
 	RegisterUser(ctx *gin.Context)
 	RegisterCompany(ctx *gin.Context)
 	Login(ctx *gin.Context)
+	LogOutCompany(ctx *gin.Context)
+	LogOutUser(ctx *gin.Context)
 }
 
 type loginController struct {
@@ -31,7 +35,7 @@ func NewLoginController(loginRepo repository.LoginRepository) LoginController {
 // @Tags Form
 // @Accept  */*
 // @Produce  json
-// @Param data body entity.User true "User"
+// @Param data body dto.RegisterUser true "User"
 // @Success 201 {object} entity.User
 // @Failure 400 {object} dto.ErrorResponse
 // @Router /form/register/user [post]
@@ -57,7 +61,7 @@ func (c *loginController) RegisterUser(ctx *gin.Context) {
 // @Tags Form
 // @Accept  */*
 // @Produce  json
-// @Param data body entity.Company true "Company"
+// @Param data body dto.RegisterCompany true "Company"
 // @Success 201 {object} entity.Company
 // @Failure 400 {object} dto.ErrorResponse
 // @Router /form/register/company [post]
@@ -116,5 +120,53 @@ func (c *loginController) Login(ctx *gin.Context) {
 	} else {
 		errResponse.Message = "role must be user or company"
 		ctx.JSON(http.StatusBadRequest, errResponse)
+	}
+}
+
+// Log Out Company
+// @Summary Log Out Company in the app
+// @Description Log Out Company in the app
+// @Tags Form
+// @Accept  */*
+// @Produce  json
+// @Security ApiKeyAuth
+// @Success 200 {object} dto.LogOutDto
+// @Failure 400 {object} dto.ErrorResponse
+// @Router /logut/company [post]
+func (c *loginController) LogOutCompany(ctx *gin.Context) {
+	var errResponse dto.ErrorResponse
+	var logOutDto dto.LogOutDto
+	authorId := ctx.MustGet("user_id")
+	err := c.loginRepo.LogOutCompany(authorId.(string))
+	if err != nil {
+		errResponse.Message = "Failed to Logout Company"
+		ctx.JSON(http.StatusBadRequest, errResponse)
+	} else {
+		logOutDto.Message = "Logout Company Success"
+		ctx.JSON(http.StatusOK, logOutDto)
+	}
+}
+
+// Log Out Company
+// @Summary Log Out User in the app
+// @Description Log Out User in the app
+// @Tags Form
+// @Accept  */*
+// @Produce  json
+// @Security ApiKeyAuth
+// @Success 200 {object} dto.LogOutDto
+// @Failure 400 {object} dto.ErrorResponse
+// @Router /logut/user [post]
+func (c *loginController) LogOutUser(ctx *gin.Context) {
+	var errResponse dto.ErrorResponse
+	var logOutDto dto.LogOutDto
+	authorId := ctx.MustGet("user_id")
+	err := c.loginRepo.LogOutUser(authorId.(string))
+	if err != nil {
+		errResponse.Message = "Failed to Logout User"
+		ctx.JSON(http.StatusBadRequest, errResponse)
+	} else {
+		logOutDto.Message = "Logout User Success"
+		ctx.JSON(http.StatusOK, gin.H{"message": "Logout User Success"})
 	}
 }
