# dto/logout.dto.go
@@ -1,0 +1,5 @@
+package dto
+
+type LogOutDto struct {
+	Message string
+}
