# dto/register.dto.go
@@ -1,0 +1,13 @@
+package dto
+
+type RegisterUser struct {
+	Name string `json:"name" binding:"required"`
+	Email string `json:"email" binding:"required"`
+	Password string `json:"password" binding:"required"`	
+}
+
+type RegisterCompany struct {
+	Name string `json:"name" binding:"required"`
+	Email string `json:"email" binding:"required"`
+	Password string `json:"password" binding:"required"`
+}
